--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --config ./webpack.config.js --mode development",
     "build": "webpack",
-    "test": "jest",
+    "test": "jest -c jest.config.ts --passWithNoTests --forceExit --coverage",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "chromatic": "npx chromatic --project-token=7f83e5541f1d"
