--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-test-renderer": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "typescript": "^4.9.5"
   },
   "readme": "ERROR: No README data found!",
   "_id": "minet_app@1.0.0"
