--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,10 +4,10 @@ sonar.host.url = https://sonarcloud.io
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=./src
-sonar.exclusions=**/src/App.tsx,**/src/utils/**,**/*.stories.tsx,**/src/index.tsx,**/webpack.config.js,**/hook.ts
+sonar.exclusions=**/src/App.tsx,**/src/utils/**,**/*.stories.tsx,**/src/index.tsx,**/webpack.config.js,**/hook.ts, **/src/components/pages/**,**/src/components/atoms/**,**/src/components/molecules/**,**/src/components/organisms/**,**/src/components/templates/**
 sonar.tests=./src
 sonar.test.inclusions=src/**/*.test.tsx,**/*.test.ts
-sonar.test.exclusions=**/node_modules/**,**/*.spec.ts,**/*.stories.tsx,**/src/services/**,**/coverage/**, src/App.tsx, **/scannerwork/**, **/src/components/molecules/**, **/src/components/organisms/**, **/src/components/pages/** 
+sonar.test.exclusions=**/node_modules/**,**/*.spec.ts,**/*.stories.tsx,**/src/services/**,**/coverage/**, src/App.tsx, **/scannerwork/**
 sonar.language=ts
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
